--- a/Node.js/package.json
+++ b/Node.js/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "socket.io": "^4.5.4"
   },
   "devDependencies": {
     "mocha": "^10.1.0"
