--- a/Node.js/package.json
+++ b/Node.js/package.json
@@ -4,6 +4,7 @@
   "description": "WebRTC sample project",
   "main": "index.js",
   "scripts": {
+    "start_chat": "node server/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
